[gd_scene load_steps=10 format=4 uid="uid://826t45e8mlh3"]

[ext_resource type="Script" path="res://scripts/time_platforming_minigame4.gd" id="1_c8u1y"]
[ext_resource type="TileSet" uid="uid://bhw4bxuqfh87o" path="res://assets/1bitplatformerpack/platforming_tileset.tres" id="2_75i0a"]
[ext_resource type="PackedScene" uid="uid://cmuyixh24ptkc" path="res://scenes/platforming_goal.tscn" id="3_5p8f4"]
[ext_resource type="PackedScene" uid="uid://c2iafl58bub3k" path="res://scenes/platforming_player.tscn" id="4_4edki"]
[ext_resource type="FontFile" uid="uid://cm8dnumwsttrn" path="res://assets/fonts/Silkscreen/slkscr.ttf" id="6_7anau"]
[ext_resource type="PackedScene" uid="uid://bgwqpaqgk52bi" path="res://scenes/countdown_label.tscn" id="7_va7d0"]
[ext_resource type="PackedScene" uid="uid://daybuxnjj7tm5" path="res://scenes/luck_label.tscn" id="8_prlso"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6i6mo"]
size = Vector2(64, 5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xlhsp"]
size = Vector2(40, 5)

[node name="TimePlatformingMinigame4" type="Node2D"]
script = ExtResource("1_c8u1y")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(104, -31)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AADg/w0AAQASABIAAADg/wwAAQASABIAAADg/wsAAQASABIAAADg/woAAQASABIAAADg/wkAAQASABIAAADg/wgAAQASABIAAADg/wcAAQASABIAAADg/wYAAQASABIAAADg/wUAAQASABIAAADg/wQAAQASABIAAADg/wMAAQASABIAAADg/wIAAQASABIAAADg/wEAAQASABIAAADg/wAAAQASABIAAADg////AQASABIAAADg//7/AQASABIAAADg//3/AQASABIAAADg//z/AQASABIAAADg//v/AQASABIAAADg//r/AQASABIAAADg//n/AQASABIAAADh//n/AQASABIAAADi//n/AQASABIAAADj//n/AQASABIAAADk//n/AQASABIAAADl//n/AQASABIAAADm//n/AQASABIAAADn//n/AQASABIAAADo//n/AQASABIAAADp//n/AQASABIAAADq//n/AQASABIAAADr//n/AQASABIAAADs//n/AQASABIAAADt//n/AQASABIAAADu//n/AQASABIAAADv//n/AQASABIAAADw//n/AQASABIAAADx//n/AQASABIAAADy//n/AQASABIAAADz//n/AQASABIAAAD0//n/AQASABIAAAD1//n/AQASABIAAAD2//n/AQASABIAAAD3//n/AQASABIAAAD4//n/AQASABIAAAD5//n/AQASABIAAAD6//n/AQASABIAAAD7//n/AQASABIAAAD8//n/AQASABIAAAD9//n/AQASABIAAAD+//n/AQASABIAAAD///n/AQASABIAAAAAAPn/AQASABIAAAABAPn/AQASABIAAAACAPn/AQASABIAAAADAPn/AQASABIAAAAEAPn/AQASABIAAAAFAPn/AQASABIAAAAFAPr/AQASABIAAAAFAPv/AQASABIAAAAFAPz/AQASABIAAAAFAP3/AQASABIAAAAFAP7/AQASABIAAAAFAP//AQASABIAAAAFAAAAAQASABIAAAAFAAEAAQASABIAAAAFAAIAAQASABIAAAAFAAMAAQASABIAAAAFAAQAAQASABIAAAAFAAUAAQASABIAAAAFAAYAAQASABIAAAAFAAcAAQASABIAAAAFAAgAAQASABIAAAAFAAkAAQASABIAAAAFAAoAAQASABIAAAAFAAsAAQASABIAAAAFAAwAAQASABIAAAAFAA0AAQASABIAAADg/w4AAQASABIAAADh/w4AAQASABIAAADi/w4AAQASABIAAADj/w4AAQASABIAAADk/w4AAQASABIAAADl/w4AAQASABIAAADm/w4AAQASABIAAADn/w4AAQASABIAAADo/w4AAQASABIAAADp/w4AAQASABIAAADq/w4AAQASABIAAADr/w4AAQASABIAAADs/w4AAQASABIAAADt/w4AAQASABIAAADu/w4AAQASABIAAADv/w4AAQASABIAAADw/w4AAQASABIAAADx/w4AAQASABIAAADy/w4AAQASABIAAADz/w4AAQASABIAAAD0/w4AAQASABIAAAD1/w4AAQASABIAAAD2/w4AAQASABIAAAD3/w4AAQASABIAAAD4/w4AAQASABIAAAD5/w4AAQASABIAAAD6/w4AAQASABIAAAD7/w4AAQASABIAAAD8/w4AAQASABIAAAD9/w4AAQASABIAAAD+/w4AAQASABIAAAD//w4AAQASABIAAAAAAA4AAQASABIAAAABAA4AAQASABIAAAACAA4AAQASABIAAAADAA4AAQASABIAAAAEAA4AAQASABIAAAAFAA4AAQASABIAAADh/wkAAQAKAAkAAAAEAAkAAQAMAAkAAADh/woAAQAKAAoAAAAEAAsAAQAMAAoAAAAEAAwAAQAMAA4AAAAEAA0AAQAMAAsAAADh/w0AAQAKAAsAAADh/wsAAQAKAA4AAADh/wwAAQAKAA4AAAAEAAoAAQAMAA4AAADi/w0AAQALAAsAAADj/w0AAQALAAsAAADk/w0AAQALAAsAAADl/w0AAQALAAsAAADm/w0AAQALAAsAAADn/w0AAQALAAsAAADo/w0AAQALAAsAAADp/w0AAQALAAsAAADq/w0AAQALAAsAAADr/w0AAQALAAsAAADs/w0AAQALAAsAAADt/w0AAQAMAAsAAADu/w0AAQAKAAwAAADv/w0AAQALAAwAAADw/w0AAQALAAwAAADx/w0AAQALAAwAAADy/w0AAQALAAwAAADz/w0AAQALAAwAAAD2/w0AAQAKAAsAAAD3/w0AAQALAAsAAAD4/w0AAQALAAsAAAD5/w0AAQALAAsAAAD6/w0AAQALAAsAAAD7/w0AAQALAAsAAAD8/w0AAQALAAsAAAD9/w0AAQALAAsAAAD+/w0AAQALAAsAAAD//w0AAQALAAoAAAAAAA0AAQALAAsAAAABAA0AAQALAAsAAAACAA0AAQALAAsAAAADAA0AAQALAAsAAADi/wkAAQALAAkAAADj/wkAAQALAAkAAADk/wkAAQALAAkAAADl/wkAAQALAAkAAADm/wkAAQALAAkAAADn/wkAAQALAAkAAADo/wkAAQALAAkAAADp/wkAAQALAAkAAADq/wkAAQALAAkAAADr/wkAAQALAAkAAADs/wkAAQALAAkAAADt/wkAAQAMAAkAAAD2/wkAAQAKAAkAAAD3/wkAAQALAAkAAAD4/wkAAQALAAkAAAD5/wkAAQALAAkAAAD6/wkAAQALAAkAAAD7/wkAAQALAAkAAAD8/wkAAQALAAkAAAD9/wkAAQALAAkAAAD+/wkAAQALAAkAAAD//wkAAQALAAkAAAAAAAkAAQALAAkAAAABAAkAAQALAAkAAAACAAkAAQALAAkAAAADAAkAAQALAAkAAADp/wwAAQALAAoAAADp/wsAAQASABIAAADp/woAAQASABIAAADo/woAAQASABIAAADn/woAAQASABIAAADm/woAAQASABIAAADl/woAAQALAAoAAADk/woAAQASABIAAADj/woAAQASABIAAADi/woAAQASABIAAADi/wsAAQASABIAAADi/wwAAQASABIAAADj/wwAAQALAAoAAADj/wsAAQASABIAAADk/wsAAQASABIAAADk/wwAAQASABIAAADl/wwAAQASABIAAADl/wsAAQASABIAAADm/wsAAQASABIAAADm/wwAAQASABIAAADn/wwAAQASABIAAADn/wsAAQASABIAAADo/wsAAQASABIAAADo/wwAAQASABIAAADq/woAAQASABIAAADq/wsAAQASABIAAADq/wwAAQASABIAAADr/wwAAQASABIAAADr/wsAAQASABIAAADr/woAAQASABIAAADs/woAAQASABIAAADs/wsAAQASABIAAADs/wwAAQASABIAAADt/wwAAQAMAAoAAADt/wsAAQAMAA4AAADt/woAAQAMAA4AAAD2/woAAQAKAA4AAAD2/wsAAQAKAA4AAAD2/wwAAQAKAAoAAAD3/wwAAQASABIAAAD3/wsAAQASABIAAAD3/woAAQASABIAAAD4/woAAQASABIAAAD4/wsAAQASABIAAAD4/wwAAQASABIAAAD5/wwAAQASABIAAAD5/wsAAQASABIAAAD5/woAAQASABIAAAD6/woAAQASABIAAAD6/wsAAQASABIAAAD6/wwAAQASABIAAAD7/wwAAQASABIAAAD7/wsAAQASABIAAAD7/woAAQALAAoAAAD8/woAAQASABIAAAD8/wsAAQASABIAAAD8/wwAAQASABIAAAD9/wwAAQASABIAAAD9/wsAAQASABIAAAD9/woAAQASABIAAAD+/woAAQASABIAAAD+/wsAAQASABIAAAD+/wwAAQASABIAAAD//wwAAQASABIAAAD//wsAAQASABIAAAD//woAAQASABIAAAAAAAoAAQASABIAAAAAAAsAAQASABIAAAAAAAwAAQASABIAAAABAAwAAQASABIAAAABAAsAAQASABIAAAABAAoAAQASABIAAAACAAoAAQASABIAAAACAAsAAQALAAoAAAACAAwAAQASABIAAAADAAwAAQASABIAAAADAAsAAQASABIAAAADAAoAAQASABIAAAD0/w0AAQALAAwAAAD1/w0AAQAMAAwAAADu/wwAAQACAAYAAADv/wwAAQACAAYAAADw/wwAAQACAAYAAADx/wwAAQACAAYAAADy/wwAAQACAAYAAADz/wwAAQACAAYAAAD0/wwAAQACAAYAAAD1/wwAAQACAAYAAADr/wUAAQAAAAAAAADr/wQAAQAAAAAAAADr/wMAAQAAAAAAAADr/wIAAQAAAAAAAADr/wEAAQAAAAAAAADr/wAAAQAAAAAAAADr////AQAAAAAAAADr//7/AQAAAAAAAADr//3/AQAAAAAAAADr//z/AQAAAAAAAADr//v/AQAAAAAAAADr//r/AQAAAAAAAADq//r/AQAAAAAAAADp//r/AQAAAAAAAADo//r/AQAAAAAAAADn//r/AQAAAAAAAADm//r/AQAAAAAAAADl//r/AQAAAAAAAADk//r/AQAAAAAAAADj//r/AQAAAAAAAADi//r/AQAAAAAAAADh//r/AQAAAAAAAADh//v/AQAAAAAAAADh//z/AQAAAAAAAADh//3/AQAAAAAAAADh//7/AQAAAAAAAADh////AQAAAAAAAADh/wAAAQAAAAAAAADh/wEAAQAAAAAAAADh/wIAAQAAAAAAAADh/wMAAQAAAAAAAADh/wQAAQAAAAAAAADh/wUAAQAAAAAAAADh/wYAAQAAAAAAAADh/wcAAQAAAAAAAADh/wgAAQAAAAAAAADi/wgAAQAAAAAAAADi/wcAAQAAAAAAAADi/wYAAQAAAAAAAADi/wUAAQAAAAAAAADi/wQAAQAAAAAAAADi/wMAAQAAAAAAAADi/wIAAQAAAAAAAADi/wEAAQAAAAAAAADi/wAAAQAAAAAAAADi////AQAAAAAAAADi//7/AQAAAAAAAADi//3/AQAAAAAAAADi//z/AQAAAAAAAADi//v/AQAAAAAAAADj//v/AQAAAAAAAADj//z/AQAAAAAAAADj//3/AQAAAAAAAADj//7/AQAAAAAAAADj////AQAAAAAAAADj/wAAAQAAAAAAAADj/wEAAQAAAAAAAADj/wIAAQAAAAAAAADj/wMAAQAAAAAAAADj/wQAAQAAAAAAAADj/wUAAQAAAAAAAADj/wYAAQAAAAAAAADj/wcAAQAAAAAAAADj/wgAAQAAAAAAAADk/wgAAQAAAAAAAADk/wcAAQAAAAAAAADk/wYAAQAAAAAAAADk/wUAAQAAAAAAAADk/wQAAQAAAAAAAADk/wMAAQAAAAAAAADk/wIAAQAAAAAAAADk/wEAAQAAAAAAAADk/wAAAQAAAAAAAADk////AQAAAAAAAADk//7/AQAAAAAAAADk//3/AQAAAAAAAADk//z/AQAAAAAAAADk//v/AQAAAAAAAADl//v/AQAAAAAAAADl//z/AQAAAAAAAADl//3/AQAAAAAAAADl//7/AQAAAAAAAADl////AQAAAAAAAADl/wAAAQAAAAAAAADl/wEAAQAAAAAAAADl/wIAAQAAAAAAAADl/wMAAQAAAAAAAADl/wQAAQAAAAAAAADl/wUAAQAAAAAAAADl/wYAAQAAAAAAAADl/wcAAQAAAAAAAADl/wgAAQAAAAAAAADm/wgAAQAAAAAAAADm/wcAAQAAAAAAAADm/wYAAQAAAAAAAADm/wUAAQAAAAAAAADm/wQAAQAAAAAAAADm/wMAAQAAAAAAAADm/wIAAQAAAAAAAADm/wEAAQAAAAAAAADm/wAAAQAAAAAAAADm////AQAAAAAAAADm//7/AQAAAAAAAADm//3/AQAAAAAAAADm//z/AQAAAAAAAADm//v/AQAAAAAAAADn//v/AQAAAAAAAADn//z/AQAAAAAAAADn//3/AQAAAAAAAADn//7/AQAAAAAAAADn////AQAAAAAAAADn/wAAAQAAAAAAAADn/wEAAQAAAAAAAADn/wIAAQAAAAAAAADn/wMAAQAAAAAAAADn/wQAAQAAAAAAAADn/wUAAQAAAAAAAADn/wYAAQAAAAAAAADn/wcAAQAAAAAAAADn/wgAAQAAAAAAAADo/wgAAQAAAAAAAADo/wcAAQAAAAAAAADo/wYAAQAAAAAAAADo/wUAAQAAAAAAAADo/wQAAQAAAAAAAADo/wMAAQAAAAAAAADo/wIAAQAAAAAAAADo/wEAAQAAAAAAAADo/wAAAQAAAAAAAADo////AQAAAAAAAADo//7/AQAAAAAAAADo//3/AQAAAAAAAADo//z/AQAAAAAAAADo//v/AQAAAAAAAADp//v/AQAAAAAAAADp//z/AQAAAAAAAADp//3/AQAAAAAAAADp//7/AQAAAAAAAADp////AQAAAAAAAADp/wAAAQAAAAAAAADp/wEAAQAAAAAAAADp/wIAAQAAAAAAAADp/wMAAQAAAAAAAADp/wQAAQAAAAAAAADp/wUAAQAAAAAAAADp/wYAAQAAAAAAAADp/wcAAQAAAAAAAADp/wgAAQAAAAAAAADq/wgAAQAAAAAAAADq/wcAAQAAAAAAAADq/wYAAQAAAAAAAADq/wUAAQAAAAAAAADq/wQAAQAAAAAAAADq/wMAAQAAAAAAAADq/wIAAQAAAAAAAADq/wEAAQAAAAAAAADq/wAAAQAAAAAAAADq////AQAAAAAAAADq//7/AQAAAAAAAADq//3/AQAAAAAAAADq//z/AQAAAAAAAADq//v/AQAAAAAAAADr/wYAAQAAAAAAAADr/wcAAQAAAAAAAADr/wgAAQAAAAAAAADs/wgAAQAAAAAAAADs/wcAAQAAAAAAAADs/wYAAQAAAAAAAADs/wUAAQAAAAAAAADs/wQAAQAAAAAAAADs/wMAAQAAAAAAAADs/wIAAQAAAAAAAADs/wEAAQAAAAAAAADs/wAAAQAAAAAAAADs////AQAAAAAAAADs//7/AQAAAAAAAADs//3/AQAAAAAAAADs//z/AQAAAAAAAADs//v/AQAAAAAAAADs//r/AQAAAAAAAADt//r/AQAAAAAAAADt//v/AQAAAAAAAADt//z/AQAAAAAAAADt//3/AQAAAAAAAADt//7/AQAAAAAAAADt////AQAAAAAAAADt/wAAAQAAAAAAAADt/wEAAQAAAAAAAADt/wIAAQAAAAAAAADt/wMAAQAAAAAAAADt/wQAAQAAAAAAAADt/wUAAQAAAAAAAADt/wYAAQAAAAAAAADt/wcAAQAAAAAAAADt/wgAAQAAAAAAAADu/wgAAQAAAAAAAADu/wcAAQAAAAAAAADu/wYAAQAAAAAAAADu/wUAAQAAAAAAAADu/wQAAQAAAAAAAADu/wMAAQAAAAAAAADu/wIAAQAAAAAAAADu/wEAAQAAAAAAAADu/wAAAQAAAAAAAADu////AQAAAAAAAADu//7/AQAAAAAAAADu//3/AQAAAAAAAADu//z/AQAAAAAAAADu//v/AQAAAAAAAADu//r/AQAAAAAAAADv//r/AQAAAAAAAADv//v/AQAAAAAAAADv//z/AQAAAAAAAADv//3/AQAAAAAAAADv//7/AQAAAAAAAADv////AQAAAAAAAADv/wAAAQAAAAAAAADv/wEAAQAAAAAAAADv/wIAAQAAAAAAAADv/wMAAQAAAAAAAADv/wQAAQAAAAAAAADv/wUAAQAAAAAAAADv/wYAAQAAAAAAAADv/wcAAQAAAAAAAADv/wgAAQAAAAAAAADv/wkAAQAAAAAAAADu/wkAAQAAAAAAAADu/woAAQAAAAAAAADu/wsAAQAAAAAAAADv/wsAAQAAAAAAAADv/woAAQAAAAAAAADw/woAAQAAAAAAAADw/wkAAQAAAAAAAADw/wgAAQAAAAAAAADw/wcAAQAAAAAAAADw/wYAAQAAAAAAAADw/wUAAQAAAAAAAADw/wQAAQAAAAAAAADw/wMAAQAAAAAAAADw/wIAAQAAAAAAAADw/wEAAQAAAAAAAADw/wAAAQAAAAAAAADw////AQAAAAAAAADw//7/AQAAAAAAAADw//3/AQAAAAAAAADw//z/AQAAAAAAAADw//v/AQAAAAAAAADw//r/AQAAAAAAAADx//r/AQAAAAAAAADx//v/AQAAAAAAAADx//z/AQAAAAAAAADx//3/AQAAAAAAAADx//7/AQAAAAAAAADx////AQAAAAAAAADx/wAAAQAAAAAAAADx/wEAAQAAAAAAAADx/wIAAQAAAAAAAADx/wMAAQAAAAAAAADx/wQAAQAAAAAAAADx/wUAAQAAAAAAAADx/wYAAQAAAAAAAADx/wcAAQAAAAAAAADx/wgAAQAAAAAAAADx/wkAAQAAAAAAAADx/woAAQAAAAAAAADx/wsAAQAAAAAAAADw/wsAAQAAAAAAAADy/wsAAQAAAAAAAADy/woAAQAAAAAAAADy/wkAAQAAAAAAAADy/wgAAQAAAAAAAADy/wcAAQAAAAAAAADy/wYAAQAAAAAAAADy/wUAAQAAAAAAAADy/wQAAQAAAAAAAADy/wMAAQAAAAAAAADy/wIAAQAAAAAAAADy/wEAAQAAAAAAAADy/wAAAQAAAAAAAADy////AQAAAAAAAADy//7/AQAAAAAAAADy//3/AQAAAAAAAADy//z/AQAAAAAAAADy//v/AQAAAAAAAADy//r/AQAAAAAAAADz//r/AQAAAAAAAADz//v/AQAAAAAAAADz//z/AQAAAAAAAADz//3/AQAAAAAAAADz//7/AQAAAAAAAADz////AQAAAAAAAADz/wAAAQAAAAAAAADz/wEAAQAAAAAAAADz/wIAAQAAAAAAAADz/wMAAQAAAAAAAADz/wQAAQAAAAAAAADz/wUAAQAAAAAAAADz/wYAAQAAAAAAAADz/wcAAQAAAAAAAADz/wgAAQAAAAAAAADz/wkAAQAAAAAAAADz/woAAQAAAAAAAADz/wsAAQAAAAAAAAD0/wsAAQAAAAAAAAD0/woAAQAAAAAAAAD0/wkAAQAAAAAAAAD0/wgAAQAAAAAAAAD0/wcAAQAAAAAAAAD0/wYAAQAAAAAAAAD0/wUAAQAAAAAAAAD0/wQAAQAAAAAAAAD0/wMAAQAAAAAAAAD0/wIAAQAAAAAAAAD0/wEAAQAAAAAAAAD0/wAAAQAAAAAAAAD0////AQAAAAAAAAD0//7/AQAAAAAAAAD0//3/AQAAAAAAAAD0//z/AQAAAAAAAAD0//v/AQAAAAAAAAD0//r/AQAAAAAAAAD1//r/AQAAAAAAAAD1//v/AQAAAAAAAAD1//z/AQAAAAAAAAD1//3/AQAAAAAAAAD1//7/AQAAAAAAAAD1////AQAAAAAAAAD1/wAAAQAAAAAAAAD1/wEAAQAAAAAAAAD1/wIAAQAAAAAAAAD1/wMAAQAAAAAAAAD1/wQAAQAAAAAAAAD1/wUAAQAAAAAAAAD1/wYAAQAAAAAAAAD1/wcAAQAAAAAAAAD1/wgAAQAAAAAAAAD1/wkAAQAAAAAAAAD1/woAAQAAAAAAAAD1/wsAAQAAAAAAAAD2/wgAAQAAAAAAAAD2/wcAAQAAAAAAAAD2/wYAAQAAAAAAAAD2/wUAAQAAAAAAAAD2/wQAAQAAAAAAAAD2/wMAAQAAAAAAAAD2/wIAAQAAAAAAAAD2/wEAAQAAAAAAAAD2/wAAAQAAAAAAAAD2////AQAAAAAAAAD2//7/AQAAAAAAAAD2//3/AQAAAAAAAAD2//z/AQAAAAAAAAD2//v/AQAAAAAAAAD2//r/AQAAAAAAAAD3//r/AQAAAAAAAAD3//v/AQAAAAAAAAD3//z/AQAAAAAAAAD3//3/AQAAAAAAAAD3//7/AQAAAAAAAAD3////AQAAAAAAAAD3/wAAAQAAAAAAAAD3/wEAAQAAAAAAAAD3/wIAAQAAAAAAAAD3/wMAAQAAAAAAAAD3/wQAAQAAAAAAAAD3/wUAAQAAAAAAAAD3/wYAAQAAAAAAAAD3/wcAAQAAAAAAAAD3/wgAAQAAAAAAAAD4/wgAAQAAAAAAAAD4/wcAAQAAAAAAAAD4/wYAAQAAAAAAAAD4/wUAAQAAAAAAAAD4/wQAAQAAAAAAAAD4/wMAAQAAAAAAAAD4/wIAAQAAAAAAAAD4/wEAAQAAAAAAAAD4/wAAAQAAAAAAAAD4////AQAAAAAAAAD4//7/AQAAAAAAAAD4//3/AQAAAAAAAAD4//z/AQAAAAAAAAD4//v/AQAAAAAAAAD4//r/AQAAAAAAAAD5//r/AQAAAAAAAAD5//v/AQAAAAAAAAD5//z/AQAAAAAAAAD5//3/AQAAAAAAAAD5//7/AQAAAAAAAAD5////AQAAAAAAAAD5/wAAAQAAAAAAAAD5/wEAAQAAAAAAAAD5/wIAAQAAAAAAAAD5/wMAAQAAAAAAAAD5/wQAAQAAAAAAAAD5/wUAAQAAAAAAAAD5/wYAAQAAAAAAAAD5/wcAAQAAAAAAAAD5/wgAAQACAAYAAAD6/wgAAQACAAYAAAD6/wcAAQAAAAAAAAD6/wYAAQAAAAAAAAD6/wUAAQAAAAAAAAD6/wQAAQAAAAAAAAD6/wMAAQAAAAAAAAD6/wIAAQAAAAAAAAD6/wEAAQAAAAAAAAD6/wAAAQAAAAAAAAD6////AQAAAAAAAAD6//7/AQAAAAAAAAD6//3/AQAAAAAAAAD6//z/AQAAAAAAAAD6//v/AQAAAAAAAAD6//r/AQAAAAAAAAD7//r/AQAAAAAAAAD7//v/AQAAAAAAAAD7//z/AQAAAAAAAAD7//3/AQAAAAAAAAD7//7/AQAAAAAAAAD7////AQAAAAAAAAD7/wAAAQAAAAAAAAD7/wEAAQAAAAAAAAD7/wIAAQAAAAAAAAD7/wMAAQAAAAAAAAD7/wQAAQAAAAAAAAD7/wUAAQAAAAAAAAD7/wYAAQAAAAAAAAD7/wcAAQAAAAAAAAD7/wgAAQACAAYAAAD8/wgAAQACAAYAAAD8/wcAAQAAAAAAAAD8/wYAAQAAAAAAAAD8/wUAAQAAAAAAAAD8/wQAAQAAAAAAAAD8/wMAAQAAAAAAAAD8/wIAAQAAAAAAAAD8/wEAAQAAAAAAAAD8/wAAAQAAAAAAAAD8////AQAAAAAAAAD8//7/AQAAAAAAAAD8//3/AQAAAAAAAAD8//z/AQAAAAAAAAD8//v/AQAAAAAAAAD8//r/AQAAAAAAAAD9//r/AQAAAAAAAAD9//v/AQAAAAAAAAD9//z/AQAAAAAAAAD9//3/AQAAAAAAAAD9//7/AQAAAAAAAAD9////AQAAAAAAAAD9/wAAAQAAAAAAAAD9/wEAAQAAAAAAAAD9/wIAAQAAAAAAAAD9/wMAAQAAAAAAAAD9/wQAAQAAAAAAAAD9/wUAAQAAAAAAAAD9/wYAAQAAAAAAAAD9/wcAAQAAAAAAAAD9/wgAAQACAAYAAAD+/wgAAQAAAAAAAAD+/wcAAQAAAAAAAAD+/wYAAQAAAAAAAAD+/wUAAQAAAAAAAAD+/wQAAQAAAAAAAAD+/wMAAQAAAAAAAAD+/wIAAQAAAAAAAAD+/wEAAQAAAAAAAAD+/wAAAQAAAAAAAAD+////AQAAAAAAAAD+//7/AQAAAAAAAAD+//3/AQAAAAAAAAD+//z/AQAAAAAAAAD+//v/AQAAAAAAAAD+//r/AQAAAAAAAAD///r/AQAAAAAAAAD///v/AQAAAAAAAAD///z/AQAAAAAAAAD///3/AQAAAAAAAAD///7/AQAAAAAAAAD/////AQAAAAAAAAD//wAAAQAAAAAAAAD//wEAAQAAAAAAAAD//wIAAQAAAAAAAAD//wMAAQAAAAAAAAD//wQAAQAAAAAAAAD//wUAAQAAAAAAAAD//wYAAQAAAAAAAAD//wcAAQAAAAAAAAD//wgAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAcAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAQAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAIAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAAAAQAAAAAAAAAAAP//AQAAAAAAAAAAAP7/AQAAAAAAAAAAAP3/AQAAAAAAAAAAAPz/AQAAAAAAAAAAAPv/AQAAAAAAAAAAAPr/AQAAAAAAAAABAPr/AQAAAAAAAAABAPv/AQAAAAAAAAABAPz/AQAAAAAAAAABAP3/AQAAAAAAAAABAP7/AQAAAAAAAAABAP//AQAAAAAAAAABAAAAAQAAAAAAAAABAAEAAQAAAAAAAAABAAIAAQAAAAAAAAABAAMAAQAAAAAAAAABAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAgAAQAAAAAAAAACAAcAAQAAAAAAAAACAAYAAQAAAAAAAAACAAUAAQAAAAAAAAACAAQAAQAAAAAAAAACAAMAAQAAAAAAAAACAAIAAQAAAAAAAAACAAEAAQAAAAAAAAACAAAAAQAAAAAAAAACAP//AQAAAAAAAAACAP7/AQAAAAAAAAACAP3/AQAAAAAAAAACAPz/AQAAAAAAAAACAPv/AQAAAAAAAAACAPr/AQAAAAAAAAADAPr/AQAAAAAAAAADAPv/AQAAAAAAAAADAPz/AQAAAAAAAAADAP3/AQAAAAAAAAADAP7/AQAAAAAAAAADAP//AQAAAAAAAAADAAAAAQAAAAAAAAADAAEAAQAAAAAAAAADAAIAAQAAAAAAAAADAAMAAQAAAAAAAAADAAQAAQAAAAAAAAADAAUAAQAAAAAAAAADAAYAAQAAAAAAAAADAAcAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAAEAAcAAQAAAAAAAAAEAAYAAQAAAAAAAAAEAAUAAQAAAAAAAAAEAAQAAQAAAAAAAAAEAAMAAQAAAAAAAAAEAAIAAQAAAAAAAAAEAAEAAQAAAAAAAAAEAAAAAQAAAAAAAAAEAP//AQAAAAAAAAAEAP7/AQAAAAAAAAAEAP3/AQAAAAAAAAAEAPz/AQAAAAAAAAAEAPv/AQAAAAAAAAAEAPr/AQAAAAAAAAA=")
tile_set = ExtResource("2_75i0a")

[node name="PlatformingGoal" parent="." instance=ExtResource("3_5p8f4")]
position = Vector2(124, 36)
scale = Vector2(0.5, 0.5)

[node name="Player" parent="." instance=ExtResource("4_4edki")]
position = Vector2(-126, 32)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(4, 4)

[node name="TimerLabel" type="Label" parent="Camera2D"]
unique_name_in_owner = true
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 98.0
offset_top = -75.0
offset_right = 138.0
offset_bottom = -52.0
grow_horizontal = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("6_7anau")
theme_override_font_sizes/font_size = 8
text = "10.0"
horizontal_alignment = 2

[node name="GameTimer" type="Timer" parent="Camera2D/TimerLabel"]
unique_name_in_owner = true
one_shot = true

[node name="CountdownLabel" parent="Camera2D" instance=ExtResource("7_va7d0")]
unique_name_in_owner = true
offset_top = -32.5
offset_bottom = 32.5

[node name="LuckLabel" parent="Camera2D" instance=ExtResource("8_prlso")]
unique_name_in_owner = true

[node name="TransitionTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.5
one_shot = true

[node name="Killzones" type="Node2D" parent="."]

[node name="Killzone1" type="Area2D" parent="Killzones"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzones/Killzone1"]
position = Vector2(-8, 71.5)
shape = SubResource("RectangleShape2D_6i6mo")

[node name="Killzone2" type="Area2D" parent="Killzones"]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Killzones/Killzone2"]
position = Vector2(68, 39.5)
shape = SubResource("RectangleShape2D_xlhsp")
